# WorldCup

./: .gitignore  ANALYSIS_PLAN_PRESSING_SCORE_STATE.md  CITATION.cff  DATA_SOURCES.md  IMPLEMENTATION_PLAN.md  KOREA_2022_2026_CASE_STUDY_DEVIATIONS.md  KOREA_2022_2026_CASE_STUDY_PLAN.md  KOREA_2022_2026_PRELIMINARY_CASE_STUDY.md  LICENSES.md  MILESTONE_4_AUDIT_REPORT.md  Makefile  PRESSING_SCORE_STATE_ANALYSIS_DEVIATIONS.md  PRESSING_SCORE_STATE_ANALYSIS_REPORT.md  PRESSING_SCORE_STATE_MANUSCRIPT_AUDIT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: actions.yaml  context360.yaml  data_2022.yaml  korea_2022_2026_case_study.yaml  models_score_state.yaml  ppda.yaml  pressing_score_state_analysis.yaml  pressure.yaml  progression.yaml  regains.yaml  score_state.yaml  windows.yaml  xt.yaml
data/manifests/: source.json
data/raw/: README.md
docs/: implementation_log.md  metric_definitions.md
notebooks/: README.md
outputs/models/: xt_grid_reference_2018.json  xt_grid_reference_2018.npy  xt_grid_tournament_2022.json  xt_grid_tournament_2022.npy  xt_metadata_reference_2018.json  xt_metadata_tournament_2022.json
outputs/reports/: attacking_metrics_summary_2022.md  context360_coverage_2022.json  context360_validation_2022.json  data_coverage_2022.json  data_coverage_2022.md  data_validation_2022.json  discipline_state_validation_2022.json  discipline_state_validation_2022.md  korea_2022_2026_case_study_validation.json  korea_2026_source_validation.json  korea_2026_source_validation.md  korea_score_state_validation_2022_2026.json  (+43 more)
(+198 files in other folders)
